# char-literal

./: .gitignore  README.md  bmp.toml  hatch_build.py  pyproject.toml  setup.py
src/: __init__.py.template  _symbols.py.template  bmp.toml
src/char_literal/: __init__.py  __init__.py.template  _generate.py  _symbols.py
src/char_literal/_generated/: arabic.py  arabic_extended_a.py  arabic_supplement.py  armenian.py  arrows.py  ascii.py  bengali.py  block_elements.py  box_drawing.py  braille_patterns.py  buhid.py  cherokee.py  cjk_radicals_supplement.py  combining_diacritical_marks.py  combining_diacritical_marks_for_symbols.py  control_pictures.py  coptic.py  currency_symbols.py  cyrillic.py  cyrillic_supplement.py  devanagari.py  dingbats.py  enclosed_alphanumerics.py  ethiopic.py  general_punctuation.py  geometric_shapes.py  georgian.py  greek.py  greek_extended.py  gujarati.py  gurmukhi.py  hangul_jamo.py  hanunoo.py  hebrew.py  ipa_extensions.py  kangxi_radicals.py  kannada.py  khmer.py  lao.py  latin_1_supplement.py  (+27 more)
