[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "typing-extensions~=4.15 ; python_full_version < '3.11'",
    "tomli~=2.0 ; python_full_version < '3.11'",
]

[tool.hatch.build.targets.sdist]
include = [
    "/hatch_build.py",
    "/src/__init__.py.template",
    "/src/_symbols.py.template",
    "/src/bmp.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/char_literal"]
artifacts = [
    "src/char_literal/__init__.py",
    "src/char_literal/_symbols.py",
    "src/char_literal/_generated/",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[project]
name = "char-literal"
version = "0.1.0rc2"
description = "Annotate a single, literal character"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.4.0 ; python_full_version < '3.11'",
    "tomli~=2.0 ; python_full_version < '3.11'",
]

[dependency-groups]
dev = [
    "ruff~=0.13.0",
]

[project.urls]
"Documentation" = "https://github.com/havsalt/char-literal#Docs.md"
"Source Code" = "https://github.com/havsalt/char-literal"
"Issues" = "https://github.com/havsalt/char-literal/issues"
